k8s/apps/dawarich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dawarich
  namespace: dawarich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Dawarich"
    gethomepage.dev/description: "Location history tracking"
    gethomepage.dev/group: "life"
    gethomepage.dev/icon: "dawarich.png"
    gethomepage.dev/href: "https://dawarich.item.fyi"
    gethomepage.dev/siteMonitor: "https://dawarich.item.fyi" # app returns 403 on all paths unauthenticated, use external URL
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=dawarich-app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dawarich.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
